# KTools

./: .gitignore  README.md
src/: CMakeLists.txt  KTools.pro  KTools_global.h  ktools.cpp  ktools.h  resource.qrc
src/c/: utils.c  utils.h
src/cpp_h/: StaticVarsDeclarations.cpp  archiverw.cpp  archiverw.h  converter.cpp  converter.h  curl.cpp  curl.h  enums.h  exforstring.cpp  exforstring.h  file.cpp  file.h  fileidentifier.cpp  fileidentifier.h  log.cpp  log.h  options.cpp  options.h  uuidslist.cpp  uuidslist.h
src/cpp_h/Html/: ast.cpp  ast.h  tag.cpp  tag.h
src/cpp_h/HtmlAstMaker/: object.cpp
src/cpp_h/Kff/: file.cpp  file.h  fixedtypes.cpp  fixedtypes.h  list.cpp  list.h  manager.cpp  manager.h  map.cpp  map.h  metainfofs.cpp  metainfofs.h  nameinfo.h  pointer.cpp  pointer.h  rawstream.cpp  rawstream.h  string.cpp  string.h  variabletypes.cpp  variabletypes.h
src/cpp_h/Network/: client.cpp  client.h  connection.cpp  connection.h  cookies.cpp  cookies.h  header.cpp  header.h  reqresdata.cpp  reqresdata.h  request.cpp  request.h  requesthandler.cpp  requesthandler.h  response.cpp  response.h  socket.cpp  socket.h
src/cpp_h/Network/Ssl/: bio.cpp  bio.h  client.cpp  client.h  ssl.cpp  ssl.h
src/qml/QmlIncludes/: Button.qml  CollapsibleBlock.qml  InputCheckbox.qml  InputLine.qml  KawaiButton.qml  LabelComboBoxCombination.qml  LabelInputFieldCombination.qml  SwitchableWindows.qml  Text.qml
